# rich-makers

./: .dockerignore  .env.example  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.dev.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  ci.yml
analysis/: models.py
apps/: constants.py
apps/accounts/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_account_account_type_remove_account_bank_code_and_more.py
apps/analysis/: analyzers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/analysis/migrations/: 0001_initial.py  0002_initial.py
apps/analysis/tests/: test_analysis_list_api.py  tests_analyzer.py
apps/notifications/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_initial.py
apps/notifications/tests/: test_notification_api.py
apps/transactions/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0002_transaction_delete_transactionhistory.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_nickname_alter_user_phone_number.py
config/: adapter.py  celery.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
docs/: api_spec.py
notifications/: models.py
scripts/: run.sh
transactions/: models.py
users/: models.py
